--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -423,13 +423,26 @@ Post-hoc \emph{t}-tests revealed that shapes associated with Good Person (550 \(
 In this experiment, we repeated the results pattern that the positive moral valenced stimuli has an advantage over the neutral or the negative valenced association. Moreover, with a croass task analysis, we didn't found evidence that the experiment task interacted with moral valence, suggesting that the effect might not be effect by experiment task.
 These findings suggested that the facilitation effect of positive moral valence is robust and not affected by task. This robust effect detected by the associative learning is unexpected.
 
+\hypertarget{experiment-3-a}{%
+\section{Experiment 3 a}\label{experiment-3-a}}
+
+To examine the modulation effect of positive valence was an intrinsic, self-referential process, we designed study 3. In this study, moral valence was assigned to both self and a stranger. We hypothesized that the modulation effect of moral valence will be stronger for the self than for a stranger.
+
+\hypertarget{method-3}{%
+\subsection{Method}\label{method-3}}
+
+\hypertarget{participants-4}{%
+\subsubsection{Participants}\label{participants-4}}
+
+38 college students (15 female, age = 21.92 \(\pm\) 2.16) participated in experiment 3a. All of them were right-handed, and all had normal or correted-to-normal vision. Informed consent was obtained from all participants prior to the experiment according to procedures approved by a local ethics committee. One female and one male student did not finish the experiment, and 9 participants' data were excluded from analysis because less than 60\% overall accuracy, remains 29 participants (9 female, age = 22.07 \(\pm\) 2.19).
+
 \hypertarget{experiment-4a}{%
 \section{Experiment 4a}\label{experiment-4a}}
 
 In study 1-3 participants made explicit judgements about moral associations. In Experiment 4, we examined whether the effects of moral valence occur even when the moral valence information might not be relevent to the task. In this study participants made perceptual match judgements to associations between self-referential labels and shapes (cf.~Sui et al., 2012), but we presented labels of different moral valence levels in the shapes.
 
-\hypertarget{participants-4}{%
-\subsection{Participants}\label{participants-4}}
+\hypertarget{participants-5}{%
+\subsection{Participants}\label{participants-5}}
 
 64 participants (37 female, age = 19.7 \(\pm\) 1.22) participated the current study, 32 of them were from Tsinghua Universtiy in 2015, the rest were from Wenzhou University parpticipated in 2017. All participants were right-handed, and all had normalneutral or corrected-to-normalneutral vision. Informed consent was obtained from all participants prior to the experiment according to procedures approved by a local ethics committee. The data of three participants from Tsinghua site and two participants from Wenzhou site were excluded from analysis because their accuracy was close to chance (\textless{} 0.6). The results for the remaining 59 participants (33 female, age = 19.78 \(\pm\) 1.2) were analyzed and reported.
 
@@ -530,8 +543,8 @@ Other - Self 72.2 7.06 58 10.231 \textless{}.0001
 \hypertarget{experiment-4b}{%
 \section{Experiment 4b:}\label{experiment-4b}}
 
-\hypertarget{participants-5}{%
-\subsection{Participants}\label{participants-5}}
+\hypertarget{participants-6}{%
+\subsection{Participants}\label{participants-6}}
 
 \hypertarget{results-5}{%
 \subsection{Results}\label{results-5}}
